--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <link rel="manifest" href="./manifest.json">
-    <link rel="shortcut icon" href="./icon.ico">
-    <link rel="stylesheet" href="./css/default.css">
-    <link rel="stylesheet" href="./css/layout.css">
-    <link rel="stylesheet" href="./css/media-queries.css">
-    <link rel="stylesheet" href="./css/magnific-popup.css">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/icon.ico">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/default.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/layout.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/media-queries.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
 
 
     <title>Fachrezilhm</title>
@@ -20,6 +20,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+
 
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
