--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <link rel="manifest" href="./manifest.json">
-    <link rel="shortcut icon" href="./icon.ico">
-    <link rel="stylesheet" href="./css/default.css">
-    <link rel="stylesheet" href="./css/layout.css">
-    <link rel="stylesheet" href="./css/media-queries.css">
-    <link rel="stylesheet" href="./css/magnific-popup.css">
+    <link rel="manifest" href=".public/manifest.json">
+    <link rel="shortcut icon" href=".public/icon.ico">
+    <link rel="stylesheet" href=".public/css/default.css">
+    <link rel="stylesheet" href=".public/css/layout.css">
+    <link rel="stylesheet" href=".public/css/media-queries.css">
+    <link rel="stylesheet" href=".public/css/magnific-popup.css">
 
 
     <title>Fachrezilhm</title>
@@ -44,12 +44,11 @@
    <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
    <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
 
-   <script src="js/jquery.flexslider.js"></script>
-   <script src="js/waypoints.js"></script>
-   <script src="js/jquery.fittext.js"></script>
-   <script src="js/magnific-popup.js"></script>
-   <script src="js/init.js"></script>
-   <script src="path/to/particles.min.js"></script>
+   <script src="public/js/jquery.flexslider.js"></script>
+   <script src="public/js/waypoints.js"></script>
+   <script src="public/js/jquery.fittext.js"></script>
+   <script src="public/js/magnific-popup.js"></script>
+   <script src="public/js/init.js"></script>
 
   </body>
 </html>
