--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <link rel="manifest" href=".public/manifest.json">
-    <link rel="shortcut icon" href=".public/icon.ico">
-    <link rel="stylesheet" href=".public/css/default.css">
-    <link rel="stylesheet" href=".public/css/layout.css">
-    <link rel="stylesheet" href=".public/css/media-queries.css">
-    <link rel="stylesheet" href=".public/css/magnific-popup.css">
+    <link rel="manifest" href="public/manifest.json">
+    <link rel="shortcut icon" href="public/icon.ico">
+    <link rel="stylesheet" href="public/css/default.css">
+    <link rel="stylesheet" href="public/css/layout.css">
+    <link rel="stylesheet" href="public/css/media-queries.css">
+    <link rel="stylesheet" href="public/css/magnific-popup.css">
 
 
     <title>Fachrezilhm</title>
@@ -19,30 +19,12 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <header class="s-header">
-        <div class="row s-header__nav-wrap">
-            <nav class="s-header__nav">
-                <ul>
-                    <li class="current"><a class="smoothscroll" href="#hero">Home</a></li>
-                    <li><a class="smoothscroll" href="#about">About</a></li>
-                    <li><a class="smoothscroll" href="#resume">Resume</a></li>
-                    <li><a class="smoothscroll" href="#portfolio">Works</a></li>
-                    <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
-                    <li><a class="smoothscroll" href="#contact">Say Hello</a></li>
-                </ul>
-            </nav>
-        </div> <!-- end row -->
-        
-        <a class="s-header__menu-toggle" href="#0" title="Menu">
-            <span class="s-header__menu-icon"></span>
-        </a>
-    </header> <!-- end s-header -->
     <div id="root"></div>
 
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-   <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
-   <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
+   <script>window.jQuery || document.write('<script src="public/js/jquery-1.10.2.min.js"><\/script>')</script>
+   <script type="text/javascript" src="public/js/jquery-migrate-1.2.1.min.js"></script>
 
    <script src="public/js/jquery.flexslider.js"></script>
    <script src="public/js/waypoints.js"></script>
